# odme_anomalies

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2e1b104cf8bc_initial_schema.py
src/odme_anomalies/: main.py
src/odme_anomalies/api/v1/: router.py
src/odme_anomalies/api/v1/endpoints/: anomalies.py  ingest.py  report.py  resolve.py
src/odme_anomalies/core/: config.py
src/odme_anomalies/crud/: anomaly_reader.py
src/odme_anomalies/db/: base_model_imports.py  session.py
src/odme_anomalies/models/: __init__.py  agent_report.py  anomaly.py  anomaly_attribute.py
src/odme_anomalies/schemas/: agent_report_schema.py  anomaly_schema.py
src/odme_anomalies/services/: threat_level.py
tests/: test_anomalies.py  test_ingest.py  test_report_resolve.py
