[project]
name = "odme-anomalies"
version = "0.1.0"
description = "A service for monitoring mythological anomalies"
authors = [
  { name = "bntmzu", email = "kuranova988@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1,<0.117.0",
    "uvicorn[standard]>=0.35.0,<0.36.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.4,<2.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "aiosqlite>=0.19",
    "pydantic-settings>=2.10.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "httpx>=0.28.1",
    "black>=25.1.0",
    "isort>=6.0.1"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["odme_anomalies"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
